# stack

./: .env.example  .gitignore  .yamllint.yaml  AGENTS.md  CHANGELOG-v0.4.42-hardened.md  CHANGELOG.md  CLAUDE.md  CLAUDE2.md  CONTRIBUTING.md  Cargo.toml  EZ_Stack_Mass_API_Audit_v8.md  HARDENING_REPORT.md  LICENSE  Makefile  README.md  RELEASE_NOTES_v0.4.41.md  SECURITY.md  SEZ_Stack_Mass_API_Audit_v8.md  SEZ_Stack_Mass_API_Deep_Audit_v7.md  SUPREMUM-DISCIPLINE.md  VERSION  audit-tracker.md  mkdocs.yml  verify.sh  zone.yaml
crates/msez-agentic/: Cargo.toml
crates/msez-agentic/src/: audit.rs  evaluation.rs  lib.rs  policy.rs  scheduler.rs
crates/msez-api/: Cargo.toml
crates/msez-api/src/: auth.rs  error.rs  extractors.rs  lib.rs  state.rs
crates/msez-api/src/middleware/: metrics.rs  mod.rs  rate_limit.rs  tracing_mw.rs
crates/msez-api/src/routes/: consent.rs  corridors.rs  entities.rs  fiscal.rs  identity.rs  mod.rs  ownership.rs  regulator.rs  smart_assets.rs
crates/msez-arbitration/: Cargo.toml
crates/msez-arbitration/src/: dispute.rs  enforcement.rs  escrow.rs  evidence.rs  lib.rs
crates/msez-cli/: Cargo.toml
crates/msez-cli/src/: artifact.rs  corridor.rs  lib.rs  lock.rs  main.rs  signing.rs  validate.rs
crates/msez-core/: Cargo.toml
crates/msez-core/src/: canonical.rs  digest.rs  domain.rs  error.rs  identity.rs  jurisdiction.rs  lib.rs  temporal.rs
crates/msez-core/tests/: cross_language_digest.rs
crates/msez-corridor/: Cargo.toml
crates/msez-corridor/src/: anchor.rs  bridge.rs  fork.rs  lib.rs  netting.rs  receipt.rs  swift.rs
crates/msez-crypto/: Cargo.toml
crates/msez-crypto/src/: bbs.rs  cas.rs  ed25519.rs  lib.rs  mmr.rs  poseidon.rs  sha256.rs
crates/msez-pack/: Cargo.toml
crates/msez-pack/src/: lawpack.rs  lib.rs  licensepack.rs  regpack.rs  validation.rs
crates/msez-schema/: Cargo.toml
crates/msez-schema/src/: codegen.rs  lib.rs  validate.rs
crates/msez-schema/tests/: validate_all_modules.rs
crates/msez-state/: Cargo.toml
crates/msez-state/src/: corridor.rs  entity.rs  lib.rs  license.rs  migration.rs  watcher.rs
crates/msez-tensor/: Cargo.toml
crates/msez-tensor/src/: commitment.rs  evaluation.rs  lib.rs  manifold.rs  tensor.rs
crates/msez-vc/: Cargo.toml
crates/msez-vc/src/: credential.rs  lib.rs  proof.rs  registry.rs
crates/msez-zkp/: Cargo.toml
crates/msez-zkp/src/: cdb.rs  lib.rs  mock.rs  traits.rs
mez/: AUDIT_FINDINGS.md  Cargo.toml  INTEGRATION_STRESS_TEST_REPORT.md  README.md
mez/crates/mez-agentic/: Cargo.toml
mez/crates/mez-agentic/src/: audit.rs  lib.rs  policy.rs  scheduler.rs  tax.rs
mez/crates/mez-api/: Cargo.toml
mez/crates/mez-api/migrations/: 20260215000001_ez_stack_tables.sql  20260215000002_tax_events.sql  20260220000001_sovereign_mass_tables.sql  20260221000001_trade_flow_tables.sql
mez/crates/mez-api/src/: auth.rs  bootstrap.rs  compliance.rs  error.rs  extractors.rs  lib.rs  main.rs  openapi.rs  orchestration.rs  state.rs
mez/crates/mez-api/tests/: integration_tests.rs
mez/crates/mez-arbitration/: Cargo.toml
mez/crates/mez-arbitration/src/: dispute.rs  enforcement.rs  error.rs  escrow.rs  evidence.rs  lib.rs
mez/crates/mez-cli/: Cargo.toml
mez/crates/mez-cli/src/: artifact.rs  compose.rs  corridor.rs  deploy_gen.rs  lib.rs  lock.rs  main.rs  regpack.rs  signing.rs  validate.rs  zone.rs  zone_init.rs
mez/crates/mez-compliance/: Cargo.toml
mez/crates/mez-compliance/src/: evaluators.rs  jurisdiction.rs  lib.rs
mez/crates/mez-core/: Cargo.toml  build.rs
mez/crates/mez-core/src/: canonical.rs  digest.rs  domain.rs  error.rs  identity.rs  jurisdiction.rs  lib.rs  sovereignty.rs  temporal.rs
mez/crates/mez-core/tests/: cross_language.rs
mez/crates/mez-corridor/: Cargo.toml
mez/crates/mez-corridor/src/: anchor.rs  bridge.rs  composition.rs  fork.rs  lib.rs  migration.rs  netting.rs  network.rs  payment_rail.rs  receipt.rs  registry.rs  swift.rs  trade.rs  trade_manager.rs
mez/crates/mez-crypto/: Cargo.toml
mez/crates/mez-crypto/src/: bbs.rs  cas.rs  ed25519.rs  error.rs  hsm.rs  key_provider.rs  lib.rs  mmr.rs  poseidon.rs  sha256.rs
mez/crates/mez-crypto/tests/: cross_language.rs
mez/crates/mez-integration-tests/: BUG_LEDGER.md  Cargo.toml
mez/crates/mez-integration-tests/tests/: api_contract.rs  boundary_and_determinism.rs  cross_crate_flows.rs  panic_paths.rs  serde_fidelity.rs  sovereign_mass_test.rs  sovereign_orchestration_test.rs  sovereign_persistence_test.rs  sovereign_pipeline_test.rs  state_machine_matrix.rs  test_additional_artifact_types_cas.rs  test_adversarial_security.rs  test_agentic.rs  test_agentic_deep.rs  test_agentic_policy_evaluation.rs  test_akoma_schema_validation.rs  test_api_scenario_e2e.rs  test_arbitration.rs  test_artifact_bundle_attestation.rs  test_artifact_graph_from_bundle.rs  test_artifact_graph_strict_smart_asset.rs  test_artifact_graph_verify.rs  test_artifact_graph_witness_bundle.rs  test_artifact_graph_witness_bundle_dir_root.rs  test_artifactref_digest_fields.rs  test_asset_migration_flow.rs  (+93 more)
mez/crates/mez-mass-client/: Cargo.toml
mez/crates/mez-mass-stub/: Cargo.toml
mez/crates/mez-pack/: Cargo.toml
mez/crates/mez-schema/: Cargo.toml
mez/crates/mez-state/: Cargo.toml
mez/crates/mez-tensor/: Cargo.toml
mez/crates/mez-vc/: Cargo.toml
mez/crates/mez-zkp/: Cargo.toml
msez/: AUDIT_FINDINGS.md  Cargo.toml  INTEGRATION_STRESS_TEST_REPORT.md  README.md
msez/crates/msez-agentic/: Cargo.toml
msez/crates/msez-api/: Cargo.toml
msez/crates/msez-arbitration/: Cargo.toml
msez/crates/msez-cli/: Cargo.toml
msez/crates/msez-compliance/: Cargo.toml
msez/crates/msez-core/: Cargo.toml  build.rs
msez/crates/msez-corridor/: Cargo.toml
msez/crates/msez-crypto/: Cargo.toml
msez/crates/msez-integration-tests/: BUG_LEDGER.md  Cargo.toml
msez/crates/msez-mass-client/: Cargo.toml
msez/crates/msez-pack/: Cargo.toml
msez/crates/msez-schema/: Cargo.toml
msez/crates/msez-state/: Cargo.toml
msez/crates/msez-tensor/: Cargo.toml
msez/crates/msez-vc/: Cargo.toml
msez/crates/msez-zkp/: Cargo.toml
(+2592 files in other folders)
