[workspace]
resolver = "2"
members = [
    "crates/mez-core",
    "crates/mez-crypto",
    "crates/mez-vc",
    "crates/mez-state",
    "crates/mez-tensor",
    "crates/mez-zkp",
    "crates/mez-pack",
    "crates/mez-corridor",
    "crates/mez-agentic",
    "crates/mez-arbitration",
    "crates/mez-compliance",
    "crates/mez-schema",
    "crates/mez-api",
    "crates/mez-mass-client",
    "crates/mez-cli",
    "crates/mez-integration-tests",
]

[workspace.package]
version = "0.4.44"
edition = "2021"
rust-version = "1.75"
license = "BUSL-1.1"
repository = "https://github.com/momentum-ez/stack"

[workspace.dependencies]
# Internal crates
mez-core = { path = "crates/mez-core" }
mez-crypto = { path = "crates/mez-crypto" }
mez-vc = { path = "crates/mez-vc" }
mez-state = { path = "crates/mez-state" }
mez-tensor = { path = "crates/mez-tensor" }
mez-zkp = { path = "crates/mez-zkp" }
mez-pack = { path = "crates/mez-pack" }
mez-corridor = { path = "crates/mez-corridor" }
mez-agentic = { path = "crates/mez-agentic" }
mez-arbitration = { path = "crates/mez-arbitration" }
mez-compliance = { path = "crates/mez-compliance" }
mez-schema = { path = "crates/mez-schema" }
mez-mass-client = { path = "crates/mez-mass-client" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Error handling
thiserror = "1"
anyhow = "1"

# Cryptography
sha2 = "0.10"
ed25519-dalek = { version = "2", features = ["serde", "rand_core", "zeroize"] }
zeroize = { version = "1", features = ["derive"] }
rand_core = { version = "0.6", features = ["getrandom"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Identifiers
uuid = { version = "1", features = ["v4", "serde"] }

subtle = "2"
parking_lot = "0.12"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
url = "2"

# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono", "uuid", "json"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
prometheus = "0.13"

# OpenAPI
utoipa = { version = "4", features = ["axum_extras", "chrono", "uuid"] }

# Testing
proptest = "1"
tempfile = "3"
http-body-util = "0.1"
