[package]
name = "msez-agentic"
description = "Agentic policy engine for the SEZ Stack: 20 trigger types, 7 standard policies, automated compliance actions, and policy audit trail."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
msez-core = { workspace = true }
msez-tensor = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
