[package]
name = "msez-arbitration"
description = "Dispute resolution for the SEZ Stack: dispute lifecycle, evidence package management, escrow operations, and award enforcement."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
msez-core = { workspace = true }
msez-state = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
