[package]
name = "msez-corridor"
description = "Corridor operations for the SEZ Stack: Dijkstra bridge routing, receipt chain management, fork detection/resolution, L1 anchoring, settlement netting, and SWIFT pacs.008 adapter."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
msez-core = { workspace = true }
msez-state = { workspace = true }
msez-crypto = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
