[package]
name = "msez-crypto"
description = "Cryptographic primitives for the SEZ Stack: Ed25519 signing, SHA-256 digest computation, Merkle Mountain Range, and content-addressed storage."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
# Phase 4: Poseidon2 ZK-friendly hashing. Contains only type signatures
# and unimplemented!() bodies until a real Poseidon2 backend is integrated.
poseidon2 = []
# Phase 4: BBS+ selective disclosure signatures. Contains only type
# signatures until a real BBS+ backend is integrated.
bbs-plus = []

[dependencies]
msez-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
