[package]
name = "msez-pack"
description = "Pack Trilogy for the SEZ Stack: Lawpack (statute-to-machine-readable rules), Regpack (regulatory requirement sets), and Licensepack (license lifecycle management)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
msez-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
