[package]
name = "msez-schema"
description = "JSON Schema validation and code generation for the SEZ Stack: runtime validation of YAML module descriptors and compile-time Rust type generation from schemas."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
msez-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
jsonschema = { workspace = true }
thiserror = { workspace = true }
