[package]
name = "msez-state"
description = "Typestate-encoded state machines for the SEZ Stack: corridor lifecycle, migration saga, entity dissolution, license lifecycle, and watcher bonding."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
msez-core = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
