[package]
name = "mez-agentic"
description = "Agentic policy engine for the EZ Stack: 20 trigger types, policy evaluation with priority-based conflict resolution, automated compliance action scheduling, and tamper-evident policy audit trails."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true


[dependencies]
mez-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
