[package]
name = "mez-compliance"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
mez-core = { workspace = true }
mez-tensor = { workspace = true }
mez-pack = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
