[package]
name = "mez-mass-stub"
description = "In-memory Mass API stub server for sovereign per-zone deployment."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "mez-mass-stub"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
dashmap = "6"

[dev-dependencies]
http-body-util = { workspace = true }
tower = { workspace = true }
