[package]
name = "mez-pack"
description = "Pack Trilogy for the EZ Stack: Lawpack (statute-to-rules), Regpack (regulatory requirements), and Licensepack (license lifecycle management)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
mez-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
