[package]
name = "mez-schema"
description = "Schema validation and codegen for the EZ Stack: JSON Schema validation of YAML module descriptors and compile-time Rust type generation."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
mez-core = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
jsonschema = "0.28"

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }
