[package]
name = "mez-vc"
description = "Verifiable Credentials for the EZ Stack: W3C VC Data Model, Ed25519 proof generation/verification, and Smart Asset Registry credentials."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
mez-core = { workspace = true }
mez-crypto = { workspace = true }
mez-schema = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
rand_core = { workspace = true }
proptest = { workspace = true }
